# scrappy-requests

./: default.nix  scrappy-requests.cabal
thunks/scrappy-core/: github.json
